# psd-topo

./: README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml  code-style.yml  pytest.yml
data/: test-raw.fif
psd_topo/: __init__.py  _typing.py  feedback.py  fft.py  nfb.py  psd.py  topomap.py  weather_map.py
psd_topo/commands/: __init__.py  main.py  nfb.py  plot_psd.py  rt_topo.py  task.py  weather_map.py
psd_topo/config/: config.ini  config.py  triggers.ini
psd_topo/feedback/: __init__.py  topomap.py
psd_topo/io/: __init__.py  read_raw_egi.py  read_raw_xdf.py
psd_topo/utils/: __init__.py  _checks.py  _docs.py  utils.py
